--- a/package.json
+++ b/package.json
@@ -7,12 +7,8 @@
   "version": "0.0.0",
 
   "main": "bot.js",
-
-  "scripts": {
-
-    "start": "node bot.js"
-
-  },
+  
+  "start": "node bot.js",
 
   "dependencies": {
 
