--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "version": "0.0.0",
 
   "main": "bot.js",
-  
-  "start": "node bot.js",
-
+  script{
+  "start": "node bot.js"
+},
   "dependencies": {
 
     "discord.js": "11.1.0",
