--- a/package.json
+++ b/package.json
@@ -1,21 +1,13 @@
 {
-
-  "name": "Madara",
-
-  "description": "Rinnegan",
-
+  "name": "Test",
+  "description": "Test",
   "version": "0.0.0",
-
   "main": "bot.js",
-  script{
-  "start": "node bot.js"
-},
+  "scripts": {
+    "start": "node bot.js"
+  },
   "dependencies": {
-
     "discord.js": "11.1.0",
-
     "request": "2.81.0"
-
   }
-
 }
